Include OpenAI API integration.

--- a/Backend/FlowingBot.Api/FlowingBot.Api.csproj
+++ b/Backend/FlowingBot.Api/FlowingBot.Api.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\FlowingBot.Core\FlowingBot.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Controllers\CollectionController.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
